fix grid size on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -572,6 +572,14 @@ video {
   height: 11rem;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
+.h-32 {
+  height: 8rem;
+}
+
 .w-2\/5 {
   width: 40%;
 }
@@ -582,6 +590,14 @@ video {
 
 .w-44 {
   width: 11rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-32 {
+  width: 8rem;
 }
 
 .grid-cols-3 {
@@ -681,4 +697,32 @@ video {
 
 .font-custom {
   font-family: 'Pirata One', sans-serif;
+}
+
+@media (min-width: 640px) {
+  .sm\:h-20 {
+    height: 5rem;
+  }
+
+  .sm\:w-10 {
+    width: 2.5rem;
+  }
+
+  .sm\:w-2 {
+    width: 0.5rem;
+  }
+
+  .sm\:w-20 {
+    width: 5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:h-44 {
+    height: 11rem;
+  }
+
+  .md\:w-44 {
+    width: 11rem;
+  }
 }
